apps/makoto/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: makoto-svc
  namespace: makoto
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: makoto
